# zero-chain

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/zero-bridge/: Cargo.toml  bridge-testnet.json.example
crates/zero-bridge/src/: config.rs  coordinator.rs  eip712.rs  events.rs  http.rs  lib.rs  main.rs  rpc.rs  service.rs  watcher.rs
crates/zero-consensus/: Cargo.toml
crates/zero-consensus/src/: committee.rs  dag.rs  event_loop.rs  lib.rs  node.rs  trust.rs  validator.rs
crates/zero-crypto/: Cargo.toml
crates/zero-crypto/src/: hash.rs  keyfile.rs  keypair.rs  lib.rs  verify.rs
crates/zero-crypto/tests/: cross_sdk.rs
crates/zero-network/: Cargo.toml  build.rs
crates/zero-network/proto/: zero.proto
crates/zero-network/src/: gossip.rs  lib.rs  server.rs
crates/zero-node/: Cargo.toml
crates/zero-node/src/: bridge_api.rs  faucet.rs  main.rs
crates/zero-storage/: Cargo.toml
crates/zero-storage/src/: accounts.rs  bridge.rs  executor.rs  lib.rs  rate_limiter.rs  ring_buffer.rs  snapshot.rs  staking.rs
crates/zero-types/: Cargo.toml
crates/zero-types/src/: account.rs  block.rs  config.rs  error.rs  lib.rs  params.rs  transfer.rs
devnet/: genesis.toml  launch.sh
devnet/node0/: genesis.toml  zero.toml
devnet/node1/: zero.toml
devnet/node2/: zero.toml
