[package]
name = "zero-consensus"
description = "DAG-based leaderless aBFT consensus for Zero"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zero-types = { workspace = true }
zero-crypto = { workspace = true }
zero-storage = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
