[package]
name = "zero-network"
description = "gRPC network layer for Zero: client API and validator gossip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zero-types = { workspace = true }
zero-crypto = { workspace = true }
zero-storage = { workspace = true }
zero-consensus = { workspace = true }
parking_lot = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
