[package]
name = "zero-types"
description = "Core types for the Zero network: transfers, accounts, blocks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
